@@ -56,8 +56,9 @@ pkpgcounter currently recognizes the following document formats :
     * Brother HBP
     * Hewlett-Packard LIDIL (hpijs)
     * Structured Fax
+    * Canon BJ/BJC
 
-The eight latter ones, as well as some TIFF documents, are currently
+The nine latter ones, as well as some TIFF documents, are currently
 only supported in page counting mode.
 
 command line usage :
